# own-game

./: .env.example  .env.local  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yaml
app/admin/: models.py  routes.py  schemas.py  schemes.py  views.py
app/aiotg/client/: bot.py
app/aiotg/dispatcher/: dispatcher.py
app/aiotg/methods/: answer_callback_query.py  edit_message.py  edit_message_text.py  get_me.py  get_updates.py  send_message.py
app/aiotg/types/: callback_query.py  chat.py  keyboard.py  message.py  update.py  user.py
app/base/: base_accessor.py  base_schema.py
app/bot/: bot.py
app/bot/keyboards/: lobby.py  private.py
app/game/: models.py  schemas.py  schemes.py  types.py
app/store/: __init__.py
app/store/admin/: accessor.py
app/store/bot/: accessor.py  api.py  handler.py  manager.py  poller.py  router.py  routes.py  schemas.py  schemes.py
app/store/bot/handlers/: callbacks.py  group.py  private.py
app/store/database/: __init__.py  database.py  sqlalchemy_base.py
app/store/game/: accessor.py
app/store/tg_api/: accessor.py  dataclasses.py  poller.py
app/store/tg_api/types/: buttons.py
app/web/: app.py  config.py  logger.py  middlewares.py  schemes.py  utils.py
local-dev/: docker-compose.yml
migrations/: env.py
migrations/versions/: 4e97e5f073dc_initial_migration_created_admins_themes_.py  a165295318c1_initial_migration_created_admins_themes_.py  ed537b5d5296_initial_migration.py
