[project]
name = "own-game"
version = "0.1.0"
description = "Monolith backend service for Jeopardy game"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "aiohttp-pydantic>=2.6.0",
    "aiohttp-session==2.12.0",
    "alembic==1.13.1",
    "asyncpg==0.29.0",
    "cryptography==42.0.5",
    "greenlet==3.0.3",
    "pydantic>=2.12.5",
    "pytest==8.0.2",
    "pytest-aiohttp==1.0.5",
    "pytest-asyncio==0.23.5",
    "python-dotenv>=1.2.2",
    "sqlalchemy==2.0.27",
]
