[project]
name = "own-game"
version = "0.1.0"
description = "Monolith backend service for Jeopardy game"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "aiohttp-pydantic>=2.6.0",
    "aiohttp-session==2.12.0",
    "alembic==1.13.1",
    "asyncpg==0.29.0",
    "cryptography==42.0.5",
    "greenlet==3.0.3",
    "pydantic>=2.12.5",
    "pytest==8.0.2",
    "pytest-aiohttp==1.0.5",
    "pytest-asyncio==0.23.5",
    "python-dotenv>=1.2.2",
    "sqlalchemy==2.0.27",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.5",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
select = [
    "UP",   # pyupgrade
    "I",    # isort
    "E",    # flake8-errors
    "W",    # flake8-warnings
    "F",    # flake8-pyflakes
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "S",    # flake8-bandit
    "BLE",  # flake8-blind-except
    "T20",  # flake8-print
    "T10",  # flake8-debugger
    "PT",   # flake8-pytest-style
    "RUF",  # Ruff
    "DTZ",  # flake8-datetimez
    "ERA",  # eradicate
    "FURB", # refurb
]

exclude = [
    "migrations/versions/**",
]

ignore = [
    "RUF001", # Checks for ambiguous Unicode characters in strings.
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

exclude = [
    "migrations/versions/**",
]
